added installation notes for windows